--- a/shacklegear.csproj
+++ b/shacklegear.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{f8ec9353-897a-46bf-847c-8cb9fcddb2e0}</ProjectGuid>
+    <ProjectGuid>{F8EC9353-897A-46BF-847C-8CB9FCDDB2E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>shacklegear</RootNamespace>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\shacklegear\</OutputPath>
+    <OutputPath>mods\ShackleGear\</OutputPath>
     <IntermediateOutputPath>..\..\obj\Debug\shacklegear\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -25,13 +25,18 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\shacklegear\</OutputPath>
+    <OutputPath>mods\ShackleGear\</OutputPath>
     <IntermediateOutputPath>..\..\obj\Release\shacklegear\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Lib\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,33 +46,21 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="VintagestoryAPI">
-      <HintPath>/home/marcus/ApplicationData/vintagestory/VintagestoryAPI.dll</HintPath>
+      <HintPath>..\..\..\VintagestoryAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSSurvivalMod">
-      <HintPath>/home/marcus/ApplicationData/vintagestory/Mods\VSSurvivalMod.dll</HintPath>
+      <HintPath>..\..\..\Mods\VSSurvivalMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSEssentials">
-      <HintPath>/home/marcus/ApplicationData/vintagestory/Mods\VSEssentials.dll</HintPath>
+      <HintPath>..\..\..\Mods\VSEssentials.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VSCreativeMod">
-      <HintPath>/home/marcus/ApplicationData/vintagestory/Mods\VSCreativeMod.dll</HintPath>
+      <HintPath>..\..\..\Mods\VSCreativeMod.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>/home/marcus/ApplicationData/vintagestory/Lib\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="assets\" />
-    <Folder Include="src\" />
-    <Content Include="assets\shacklegear\itemtypes\shackle.json" />
-    <Content Include="assets\shacklegear\lang\en.json" />
-    <Content Include="assets\shacklegear\textures\item\shackle.png" />
-    <Content Include="modinfo.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Commands\ppDebug.cs" />
