--- a/shacklegear.csproj
+++ b/shacklegear.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\..\..\VintagestoryAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="VintagestoryLib">
+      <HintPath>..\..\..\VintagestoryLib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="VSSurvivalMod">
       <HintPath>..\..\..\Mods\VSSurvivalMod.dll</HintPath>
       <Private>False</Private>
