speed up harmony patch performance in single player by 50%

--- a/shacklegear.csproj
+++ b/shacklegear.csproj
@@ -82,6 +82,8 @@
     <Compile Include="src\Systems\Commands\SGXFree.cs" />
     <Compile Include="src\Systems\Commands\SGXShackle.cs" />
     <Compile Include="src\EntityBehaviors\EntityBehaviorGearFinder.cs" />
+    <Compile Include="src\Systems\ShackleGearHarmony.cs" />
+    <Compile Include="src\Utility\HackMan.cs" />
     <Compile Include="src\Systems\Patches\PatchContainers.cs" />
     <Compile Include="src\Systems\PrisonController.cs" />
     <Compile Include="src\Systems\TrackData.cs" />
