--- a/shacklegear.csproj
+++ b/shacklegear.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F8EC9353-897A-46BF-847C-8CB9FCDDB2E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>shacklegear</RootNamespace>
-    <AssemblyName>shacklegear</AssemblyName>
+    <RootNamespace>ShackleGear</RootNamespace>
+    <AssemblyName>ShackleGear</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
